--- a/P1/Vagrantfile
+++ b/P1/Vagrantfile
@@ -2,11 +2,11 @@ Vagrant.configure("2") do |config|
   
   config.vm.define("server") do |sv|
   
-    sv.vm.box = "generic/debian10"
+    sv.vm.box = "ubuntu/focal64"
     sv.vm.hostname = "schahid"
     sv.vm.network "private_network", ip: "192.168.56.110"
     sv.vm.provider("virtualbox") do |vb|
-      vb.name = "server-gns"
+      vb.name = "BADASS-P1"
       vb.memory = "2048"
       vb.cpus = 2
     end
